# robust-services-core

./: .gitignore  AGREEMENT.md  ASSIGNMENT1.md  CODEOWNERS  CONTACT.md  CONTRIBUTING.md  CONTRIBUTOR.md  ENTITY.md  INDIVIDUAL.md  README.md  rsc.sln  tsf.sln
src/: CMakeLists.txt  CMakeSettings.json  rsc.sln
src/CMake/: DefaultCXX.cmake  GlobalSettingsInclude.cmake
src/an/: AnIncrement.cpp  AnIncrement.h  AnModule.cpp  AnModule.h  CMakeLists.txt  PotsShelf.h  PotsShelfFactory.cpp  PotsShelfHandler.cpp  PotsShelfIpService.cpp  PotsTrafficThread.cpp  PotsTrafficThread.h  an.vcxproj  an.vcxproj.filters
src/app/: CMakeLists.txt  README.md  rscapp.cpp
src/cb/: BcAddress.cpp  BcAddress.h  BcCause.cpp  BcCause.h  BcEvents.cpp  BcFactory.cpp  BcHandlers.cpp  BcProgress.cpp  BcProgress.h  BcProtocol.cpp  BcProtocol.h  BcRouting.cpp  BcRouting.h  BcService.cpp  BcSessions.h  BcSsm.cpp  BcStates.cpp  BcTriggers.cpp  CMakeLists.txt  CbModule.cpp  CbModule.h  DigitString.cpp  ProxyBcSessions.cpp  ProxyBcSessions.h  ServiceCodeRegistry.cpp  ServiceCodeRegistry.h  TestCallFactory.cpp  cb.vcxproj  cb.vcxproj.filters
src/cn/: CMakeLists.txt  CnModule.cpp  CnModule.h  cn.vcxproj  cn.vcxproj.filters
src/ct/: CMakeLists.txt  CodeCoverage.cpp  CodeCoverage.h  CodeDir.cpp  CodeDir.h  CodeDirSet.cpp  CodeDirSet.h  CodeFile.cpp  CodeFile.h  CodeFileSet.cpp  CodeFileSet.h  CodeItemSet.cpp  CodeItemSet.h  CodeSet.cpp  CodeSet.h  CodeTypes.cpp  CodeTypes.h  CodeWarning.cpp  CodeWarning.h  CtIncrement.cpp  CtIncrement.h  CtModule.cpp  CtModule.h  Cxx.cpp  Cxx.h  CxxArea.cpp  CxxArea.h  CxxCharLiteral.h  CxxDirective.cpp  CxxDirective.h  CxxExecute.cpp  CxxExecute.h  CxxFwd.h  CxxLocation.cpp  CxxLocation.h  CxxNamed.cpp  CxxNamed.h  CxxRoot.cpp  CxxRoot.h  CxxScope.cpp  (+37 more)
src/dip/: Adjudicator.cpp  BaseBot.cpp  BaseBot.h  BotThread.cpp  BotThread.h  BotTrace.cpp  BotTrace.h  BotTracer.cpp  BotTracer.h  BotType.h  CMakeLists.txt  ConvoySubversion.cpp  ConvoySubversion.h  DipModule.cpp  DipModule.h  DipProtocol.cpp  DipProtocol.h  DipTypes.h  Location.cpp  Location.h  MapAndUnits.cpp  MapAndUnits.h  Province.cpp  Province.h  StartupParameters.cpp  StartupParameters.h  Token.cpp  Token.h  TokenMessage.cpp  TokenMessage.h  TokenTextMap.cpp  TokenTextMap.h  UnitOrder.cpp  UnitOrder.h  WinterOrders.cpp  WinterOrders.h  dip.vcxproj  dip.vcxproj.filters
src/exe/: README.md
src/launcher/: CMakeLists.txt  Launcher.cpp  Launcher.h  Launcher.linux.cpp  Launcher.win.cpp  README.md  RscLauncher.cpp  RscLauncher.h  RscLauncher.linux.cpp  RscLauncher.win.cpp  launcher.filters  launcher.sln  launcher.vcxproj  launcher.vcxproj.filters
src/mb/: CMakeLists.txt  Circuit.cpp  Circuit.h  MbModule.cpp  MbModule.h  MbPools.cpp  MbPools.h  MediaEndpt.cpp  MediaEndpt.h  MediaFailureEvent.cpp  MediaFailureEvent.h  MediaParameter.cpp  MediaParameter.h  MediaPsm.cpp  MediaPsm.h  MediaSsm.cpp  MediaSsm.h  Switch.cpp  Switch.h  ToneRegistry.cpp  ToneRegistry.h  Tones.cpp  Tones.h  mb.vcxproj  mb.vcxproj.filters
src/nb/: Alarm.cpp  Alarm.h  AlarmRegistry.cpp  AlarmRegistry.h  Algorithms.cpp  Algorithms.h  AllocationException.cpp  AllocationException.h  Allocators.h  Array.h  AssertionException.cpp  AssertionException.h  Base.cpp  Base.h  BuddyHeap.cpp  BuddyHeap.h  CMakeLists.txt  CallbackRequest.h  CfgBitParm.cpp  CfgBitParm.h  CfgBoolParm.cpp  CfgBoolParm.h  CfgFlagParm.cpp  CfgFlagParm.h  CfgIntParm.cpp  CfgIntParm.h  CfgParm.cpp  CfgParm.h  CfgParmRegistry.cpp  CfgParmRegistry.h  CfgStrParm.cpp  CfgStrParm.h  CfgTuple.cpp  CfgTuple.h  CinThread.cpp  CinThread.h  Class.cpp  Class.h  ClassRegistry.cpp  ClassRegistry.h  (+270 more)
src/nt/: CMakeLists.txt  FunctionProfiler.cpp  FunctionProfiler.h  FunctionStats.cpp  FunctionStats.h  NtIncrement.cpp  NtIncrement.h  NtModule.cpp  NtModule.h  NtTestData.cpp  NtTestData.h  RecoveryThread.cpp  RecoveryThread.h  TestDatabase.cpp  TestDatabase.h  nt.vcxproj  nt.vcxproj.filters
src/nw/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  InputHandler.cpp  InputHandler.h  IoThread.cpp  IoThread.h  IpBuffer.cpp  IpBuffer.h  IpPort.cpp  IpPort.h  IpPortRegistry.cpp  IpPortRegistry.h  IpService.cpp  IpService.h  IpServiceCfg.cpp  IpServiceCfg.h  IpServiceRegistry.cpp  IpServiceRegistry.h  LocalAddrTest.cpp  LocalAddrTest.h  NwCliParms.cpp  NwCliParms.h  NwDaemons.cpp  NwDaemons.h  NwIncrement.cpp  NwIncrement.h  NwLogs.cpp  NwLogs.h  NwModule.cpp  NwModule.h  NwPools.cpp  NwPools.h  NwTrace.cpp  NwTrace.h  NwTracer.cpp  NwTracer.h  NwTypes.cpp  NwTypes.h  SysIpL2Addr.cpp  (+33 more)
src/on/: CMakeLists.txt  OnModule.cpp  OnModule.h  on.vcxproj  on.vcxproj.filters
src/pb/: CMakeLists.txt  PbModule.cpp  PbModule.h  PotsBicFeature.cpp  PotsBicFeature.h  PotsBocFeature.cpp  PotsBocFeature.h  PotsCfbFeature.cpp  PotsCfbFeature.h  PotsCfnFeature.cpp  PotsCfnFeature.h  PotsCfuFeature.cpp  PotsCfuFeature.h  PotsCircuit.cpp  PotsCircuit.h  PotsCliParms.cpp  PotsCliParms.h  PotsCwtFeature.cpp  PotsCwtFeature.h  PotsCxfFeature.cpp  PotsCxfFeature.h  PotsFeature.cpp  PotsFeature.h  PotsFeatureProfile.cpp  PotsFeatureProfile.h  PotsFeatureRegistry.cpp  PotsFeatureRegistry.h  PotsFeatures.cpp  PotsFeatures.h  PotsHtlFeature.cpp  PotsHtlFeature.h  PotsIncrement.cpp  PotsIncrement.h  PotsLogs.cpp  PotsLogs.h  PotsMessages.cpp  PotsProfile.cpp  PotsProfile.h  PotsProfileRegistry.cpp  PotsProfileRegistry.h  (+10 more)
src/rn/: CMakeLists.txt  RnModule.cpp  RnModule.h  rn.vcxproj  rn.vcxproj.filters
src/rsc/: CMakeLists.txt  main.cpp  rsc.vcxproj  rsc.vcxproj.filters
src/sb/: AnalyzeMsgEvent.cpp  AnalyzeSapEvent.cpp  AnalyzeSnpEvent.cpp  CMakeLists.txt  Context.cpp  Context.h  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  Factory.cpp  Factory.h  FactoryRegistry.cpp  FactoryRegistry.h  ForceTransitionEvent.cpp  GlobalAddress.cpp  GlobalAddress.h  InitiationReqEvent.cpp  Initiator.cpp  Initiator.h  InvokerPool.cpp  InvokerPool.h  InvokerPoolRegistry.cpp  InvokerPoolRegistry.h  InvokerThread.cpp  InvokerThread.h  LocalAddress.cpp  LocalAddress.h  Message.cpp  Message.h  MsgContext.cpp  MsgContext.h  MsgFactory.cpp  MsgFactory.h  (+85 more)
(+2018 files in other folders)
